Fix z-index

--- a/css/style.css
+++ b/css/style.css
@@ -61,12 +61,18 @@
 @keyframes loader-background {
   0% {
     opacity: 1;
+    z-index: 9;
   }
   90% {
     opacity: 0.65;
   }
+  99% {
+    opacity: 0;
+    z-index: 9;
+  }
   100% {
     opacity: 0;
+    z-index: -9;
   }
 }
 /*@keyframes loader-move {
@@ -184,46 +190,6 @@ h5 {
   font-family: "Shrikhand", cursive;
 }
 
-/*.loader {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    &__ustensil {
-        color: $colour-primary;
-        font-family: 'Shrikhand', cursive;
-        font-size: 550px;
-        opacity: 0.8;
-        span {
-            display: inline-block;
-            animation: loader-pulse 0.5s alternate ease-in-out infinite;
-            &:nth-child(odd) {
-                animation-delay: 0.5s;
-            }
-        }
-
-    }
-}*/
-/*main {
-  opacity: 0.2;
-  animation: loader-homepage 5500ms 1s ease-in-out forwards;
-}*/
-/*.loader {
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  z-index: 10;
-  animation: loader-background 6s 0s ease-in-out;
-  &__title {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 0px;
-    margin-top: 300px;
-    animation: loader-title 5s 100ms ease-in-out;
-  }
-}*/
 .loader {
   width: 100%;
   height: 100%;
@@ -249,7 +215,6 @@ h5 {
   position: fixed;
   background-color: #e8f9f5;
   animation: loader-background 5s 0s ease-in both;
-  z-index: 9;
 }
 
 .header {
